--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,9 @@
   --foreground: #171717;
   --primary1: #424BD0;   /* //little darkish  */
   --primary2: #0009FF;  /* //lightihst  */
+  --primary3: #b03937;  /* //lightihst  */
+  --primary4: #ab2320;  /* //lightihst  */
+
   font-family: var(--font-myfont);
 }
 
@@ -27,9 +30,12 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+ font-family: var(--font-myfont);
+ font-size: 16px;
 }
-
+a{
+  font-size: 1.2rem;
+}
 @keyframes scroll-up {
   from {
     /* Start at the top */
@@ -37,7 +43,7 @@ body {
   }
   to {
     /* Move up exactly the height of one copy (1/3 of the 300% total height) */
-    transform: translateY(-33.33%); 
+    transform: translateY(-22.33%); 
   }
 }
 .animate-scroll-up-custom {
